--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,7 @@ steps:
 options:
   pool:
     name: 'projects/$PROJECT_ID/locations/$_LOCATION/workerPools/$_POOL_NAME'
+    logging: CLOUD_LOGGING_ONLY
 
 substitutions:
   _LOCATION: 'us-central1'
